--- a/frontend/src/renderer/components/UI/SingleSchedule.module.scss
+++ b/frontend/src/renderer/components/UI/SingleSchedule.module.scss
@@ -1,4 +1,6 @@
 .container {
+    position: relative;
+
     width: 100%;
     height: 150px;
 
@@ -11,6 +13,8 @@
     font-family: KoHo;
 
     .info {
+        position: relative;
+
         border-right: 1px black solid;
         width: 350px;
         height: 100%;
@@ -24,6 +28,8 @@
 
         margin-left: 10px;
         padding-right: 10px;
+
+        user-select: none;
 
         > div {
             display: flex;
@@ -45,13 +51,15 @@
     }
 
     .schedule {
+        position: relative;
+
         height: calc(100% + 40px);
         width: 100%;
 
         overflow-x: scroll;
         white-space: nowrap;
 
-        > div {
+        .box {
             position: relative;
 
             display: inline-block;
@@ -62,6 +70,8 @@
             width: 120px;
 
             border-right: 1px black solid;
+
+            box-sizing: border-box;
 
             .time {
                 display: block;
@@ -78,6 +88,8 @@
                 padding-left: 5px;
 
                 border-left: 2px black solid;
+
+                user-select: none;
             }
         }
 
