--- a/frontend/src/renderer/components/UI/EditableSingleSchedule.module.scss
+++ b/frontend/src/renderer/components/UI/EditableSingleSchedule.module.scss
@@ -4,7 +4,11 @@
 
     height: calc(100% - 40px);
 
-    background-color: rgba(255, 165, 0, 0.5);
+    border: 1px solid;
+
+    box-sizing: border-box;
+
+    z-index: 1;
 
     span {
         user-select: none;
