frontend - added diagnose page

--- a/frontend/src/renderer/components/Main/Subpages/Appointment.module.scss
+++ b/frontend/src/renderer/components/Main/Subpages/Appointment.module.scss
@@ -138,6 +138,10 @@
                     margin-bottom: 10px;
                     text-align: left;
                 }
+
+                textarea {
+                    font-size: 18px;
+                }
             }
         }
     }
