--- a/frontend/src/renderer/components/UI/Input.module.scss
+++ b/frontend/src/renderer/components/UI/Input.module.scss
@@ -17,4 +17,14 @@
 
         border: none;
     }
+
+    input:disabled {
+        cursor: not-allowed;
+    }
+}
+
+.input.error {
+    input {
+        outline: 2px solid red !important;
+    }
 }
