--- a/frontend/src/renderer/components/UI/MessageList.module.scss
+++ b/frontend/src/renderer/components/UI/MessageList.module.scss
@@ -38,6 +38,8 @@
 
         .status {
             width: 10%;
+            text-align: right;
+            padding-right: 20px;
         }
     }
 
