--- a/frontend/src/renderer/components/Account/RegisterForm.module.scss
+++ b/frontend/src/renderer/components/Account/RegisterForm.module.scss
@@ -62,3 +62,17 @@
 
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
+
+.hacker {
+    background-color: var(--primary-color);
+
+    width: 100%;
+
+    color: red;
+    font-size: 24px;
+    font-weight: bold;
+
+    text-align: center;
+
+    padding-bottom: 5px;
+}
