--- a/frontend/src/renderer/components/Main/Header.module.scss
+++ b/frontend/src/renderer/components/Main/Header.module.scss
@@ -9,7 +9,7 @@
     width: 100%;
     height: 120px;
 
-    background-color: var(--secondary-bg-color);
+    background-color: var(--primary-color);
 
     padding-top: 10px;
 
@@ -30,7 +30,7 @@
             align-items: center;
             justify-content: space-around;
 
-            color: white;
+            color: black;
 
             > span {
                 user-select: none;
