--- a/frontend/src/renderer/components/Main/Subpages/Diagnose.module.scss
+++ b/frontend/src/renderer/components/Main/Subpages/Diagnose.module.scss
@@ -14,7 +14,7 @@
 
     .panel {
         width: 70%;
-        background-color: #f0f0f0;
+        background-color: var(--primary-color);
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
         display: flex;
@@ -22,6 +22,8 @@
         gap: 20px;
 
         padding: 5px;
+        padding-top: 20px;
+        padding-bottom: 20px;
 
         > div {
             background-color: white;
@@ -235,13 +237,13 @@
 .records {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
     margin-top: 10px;
     margin-bottom: 10px;
 
     > div {
-        border: 2px solid rgb(140, 0, 255);
-        padding: 5px;
+        border: 2px solid var(--backup-color-1);
+        padding: 10px;
 
         display: flex;
         flex-direction: column;
@@ -342,7 +344,8 @@
 
 .collapse {
     position: relative;
-    color: blue;
+    color: black;
+    background-color: var(--backup-color-3);
 }
 
 .collapse:hover {
@@ -375,10 +378,10 @@
     align-items: center;
     flex-direction: column;
 
-    background-color: #f0f0f0;
+    background-color: var(--backup-color-3);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
-    padding: 10px;
+    padding: 20px;
 
     .placeholder {
         background-color: lightgrey;
@@ -398,6 +401,7 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
+        margin-top: 10px;
 
         span {
             font-size: 18px;
