--- a/frontend/src/renderer/components/Main/Tab.module.scss
+++ b/frontend/src/renderer/components/Main/Tab.module.scss
@@ -12,7 +12,7 @@
     > span {
         width: 200px;
         height: 35px;
-        color: white;
+        color: black;
         text-align: center;
         line-height: 30px;
         background-color: transparent;
@@ -27,18 +27,22 @@
     }
 
     > span.active {
-        color: black;
+        color: white;
     }
 
     .slide {
         position: absolute;
+        bottom: 0;
 
-        background-color: var(--main-bg-color);
+        // background-color: var(--main-bg-color);
+        background-color: var(--backup-color-1);
         color: black;
-        box-shadow: 0px 7px 4px -1px rgba(0, 0, 0, 0.25) inset;
+        // box-shadow: 0px 7px 4px -1px rgba(0, 0, 0, 0.25) inset;
 
         z-index: 1;
 
         transition: left 0.2s ease-in-out;
+
+        height: 40px;
     }
 }
