--- a/frontend/src/renderer/components/Chat/ChatBox.module.scss
+++ b/frontend/src/renderer/components/Chat/ChatBox.module.scss
@@ -8,6 +8,8 @@
 
     margin-bottom: 30px;
 
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
     // chat list
     > div:first-child {
         flex: 1;
@@ -120,6 +122,8 @@
             justify-content: center;
 
             height: 100%;
+
+            user-select: none;
         }
 
         // chat box
