--- a/frontend/src/renderer/components/Main/Subpages/Diagnose.module.scss
+++ b/frontend/src/renderer/components/Main/Subpages/Diagnose.module.scss
@@ -242,12 +242,17 @@
     margin-bottom: 10px;
 
     > div {
-        border: 2px solid var(--backup-color-1);
+        // border: 2px solid var(--backup-color-1);
+        background-color: #d9d9d9;
         padding: 10px;
 
         display: flex;
         flex-direction: column;
         gap: 10px;
+
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
+        border-radius: 5px;
 
         // complete date
         > span:nth-child(1) {
@@ -345,7 +350,7 @@
 .collapse {
     position: relative;
     color: black;
-    background-color: var(--backup-color-3);
+    background-color: rgba(241, 173, 63, 0.5);
 }
 
 .collapse:hover {
@@ -378,7 +383,7 @@
     align-items: center;
     flex-direction: column;
 
-    background-color: var(--backup-color-3);
+    background-color: var(--primary-color);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
     padding: 20px;
@@ -392,7 +397,11 @@
     > span {
         width: 200px;
         height: 200px;
-        background-color: lightgrey;
+        background-color: lightblue;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     > div {
