--- a/frontend/src/renderer/components/UI/SingleSchedule.module.scss
+++ b/frontend/src/renderer/components/UI/SingleSchedule.module.scss
@@ -44,7 +44,10 @@
         }
 
         .placeholder {
-            display: block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
 
             width: 100px;
             height: 100px;
