--- a/frontend/src/renderer/components/Main/Subpages/Appointment.module.scss
+++ b/frontend/src/renderer/components/Main/Subpages/Appointment.module.scss
@@ -159,3 +159,11 @@
     color: red;
     text-align: center;
 }
+
+.loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 100px;
+}
