--- a/frontend/src/renderer/components/Main/Subpages/Diagnose.module.scss
+++ b/frontend/src/renderer/components/Main/Subpages/Diagnose.module.scss
@@ -1,4 +1,5 @@
 .container {
+    position: relative;
     width: 90%;
     margin-top: 100px;
     margin-left: auto;
@@ -377,6 +378,9 @@
 }
 
 .patient {
+    position: fixed;
+    right: 50px;
+
     width: 20%;
 
     display: flex;
