--- a/frontend/src/renderer/components/Main/Subpages/Schedule.module.scss
+++ b/frontend/src/renderer/components/Main/Subpages/Schedule.module.scss
@@ -102,3 +102,10 @@
 
     transform: translate(-50%, -50%);
 }
+
+.hint {
+    margin-top: 200px;
+
+    font-size: 38px;
+    font-weight: 600;
+}
