--- a/frontend/src/renderer/components/Account/RegisterForm.module.scss
+++ b/frontend/src/renderer/components/Account/RegisterForm.module.scss
@@ -66,7 +66,7 @@
 .hacker {
     background-color: var(--primary-color);
 
-    width: 100%;
+    width: calc(100% - 20px);
 
     color: red;
     font-size: 24px;
